--- a/access/main.css
+++ b/access/main.css
@@ -1327,7 +1327,7 @@ html, body {
 .refresh {
     position: fixed !important;
     left: 50%;
-    bottom: 220px;      /* ← тут регулируешь высоту */
+    bottom: 190px;      /* ← тут регулируешь высоту */
     transform: translateX(-50%);
 
     display: flex !important;
@@ -1473,4 +1473,11 @@ html, body {
 /* Опустить линию у єДокумента ниже, чем у паспорта */
 .passport.passport-copy .content.front > .line.marquee {
     margin-top: 88px !important;  /* регулируй тут: 90–140px */
+}
+
+/* === ПОДНЯТЬ ЗЕЛЁНУЮ ЛИНИЮ ВО ВСЕХ ДОКУМЕНТАХ === */
+.passport .content.front > .line,
+.platnik .line,
+.passport-copy .line {
+    margin-top: 20px !important;   /* ставь сколько нужно: 10px / 15px / 20px */
 }
