--- a/access/main.css
+++ b/access/main.css
@@ -1481,3 +1481,8 @@ html, body {
 .passport-copy .line {
     margin-top: 20px !important;   /* ставь сколько нужно: 10px / 15px / 20px */
 }
+
+/* Поднять зелёную линию именно у єДокумента */
+.passport-copy .content.front > .line.marquee {
+    margin-top: 40px !important;  /* подбери: 30 / 40 / 50 px */
+}
