--- a/access/main.css
+++ b/access/main.css
@@ -1461,7 +1461,7 @@ html, body {
 
 /* Зелёная линия прижимается вниз */
 .passport-copy .line.marquee {
-    margin-top: 88 !important;
+    margin-top: 0 !important;
 }
 
 /* ФИО под линией */
@@ -1478,6 +1478,10 @@ html, body {
 /* === ПОДНЯТЬ ЗЕЛЁНУЮ ЛИНИЮ ВО ВСЕХ ДОКУМЕНТАХ === */
 .passport .content.front > .line,
 .platnik .line,
-.passport-copy .line {
     margin-top: 20px !important;   /* ставь сколько нужно: 10px / 15px / 20px */
+}
+
+/* Поднять зелёную линию у єДокумента */
+.passport.passport-copy .content.front > .line.marquee {
+    margin-top: 40px !important;  /* было 88px — стало намного выше */
 }
