--- a/access/main.css
+++ b/access/main.css
@@ -1467,7 +1467,7 @@ html, body {
 /* ФИО под линией */
 .passport-copy .name.fullname {
     margin-top: 5px !important;
-    margin-bottom: 12px !important;
+    margin-bottom: 25px !important;
 }
 
 /* Опустить линию у єДокумента ниже, чем у паспорта */
@@ -1496,4 +1496,9 @@ html, body {
 /* Поднимаем зелёную линию в паспорте максимально точно */
 .pssprt.passport .content.front > .line.marquee {
     margin-top: 8px !important;  /* подбери: 0 / 5 / 8 / 10 / 12 */
+}
+
+/* Опустить имя в єДокументі */
+.passport-copy .name.fullname {
+    margin-top: 35px !important;   /* ↑ подбери 20/25/30px */
 }
