--- a/access/main.css
+++ b/access/main.css
@@ -1502,3 +1502,13 @@ html, body {
 .passport-copy .name.fullname {
     margin-top: 30px !important;   /* ↑ подбери 20/25/30px */
 }
+
+/* Поднять зелёную линию в Платнике */
+.platnik .line.marquee {
+    margin-top: 12px !important;   /* подбери: 8 / 10 / 12 / 15 */
+}
+
+/* Поднять номер РНОКПП в Платнике */
+.platnik .number.kpp_id {
+    margin-top: 10px !important;   /* можешь 5–15 */
+}
