--- a/access/main.css
+++ b/access/main.css
@@ -1526,3 +1526,16 @@ html, body {
 .footer .icon {
     padding-top: 6px !important;   /* подбери 4 / 6 / 8 px */
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    background: #000;          /* чёрная линия */
+    padding-bottom: env(safe-area-inset-bottom);
+    padding-top: 10px;
+
+    z-index: 9999;
+}
